fix(Table): group button may disappear when text is too long

--- a/components/table/index.styl
+++ b/components/table/index.styl
@@ -36,6 +36,7 @@
     // group
     .k-group
         cursor pointer
+        max-width 100%
         .k-arrow
             display inline-block
             transition transform $transition
